--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "typings/main.d.ts",
     "custom-typings/co.d.ts",
     "custom-typings/lodash.template.d.ts",
-    "src/index.ts"
+    "src/index.ts",
+    "bin/dbl.ts"
   ]
 }
